--- a/assets/scss/modules/_sections.scss
+++ b/assets/scss/modules/_sections.scss
@@ -77,7 +77,7 @@
 	&.text-image {
 		.text-side {
 			.padding {
-				float: right;
+				//float: right;
 
 				@include phone-only {
 					float: none;
@@ -124,6 +124,7 @@
 				max-width: 45ch;
 				padding-left: 2em;
 				padding-right: 2em;
+				margin: 0 auto;
 			}
 		}
 		
